--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   # Carousel slider package
+  cupertino_icons: ^1.0.8
   carousel_slider: ^5.1.1
   cached_network_image: ^3.3.1
   shared_preferences: ^2.3.2
