Prepare to overwrite remote with local

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.getapp">
+    package="com.esa.mlxinjector">
 
     <!-- INTERNET permission harus di luar <application> -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <!-- ✅ Izin Shizuku API versi terbaru -->
     <uses-permission android:name="moe.shizuku.manager.permission.API_V23" />
 
     <application
-        android:label="getapp"
+        android:label="MLX Injector"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
@@ -33,6 +34,16 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        
+        <activity
+    android:name="com.google.android.gms.ads.AdActivity"
+    android:exported="false"
+    android:theme="@android:style/Theme.Translucent"
+    android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+        
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-1802736608698554~9016100457"/>
         
         <provider
             android:name="rikka.shizuku.ShizukuProvider"
