--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -1,4 +1,4 @@
-name: Flutter Build APK arm64
+name: Flutter Build App Bundle
 
 on:
   push:
@@ -40,7 +40,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # 5️⃣ Get Flutter dependencies
+      # 5️⃣ Get dependencies
       - name: Get dependencies
         run: flutter pub get
 
@@ -48,13 +48,13 @@ jobs:
       - name: Clean build
         run: flutter clean
 
-      # 7️⃣ Build APK arm64-v8a
-      - name: Build APK arm64
-        run: flutter build apk --release --target-platform=android-arm64 --split-per-abi
+      # 7️⃣ Build App Bundle (unsigned)
+      - name: Build App Bundle
+        run: flutter build appbundle --release
 
-      # 8️⃣ Upload APK artifact
-      - name: Upload APK artifact
+      # 8️⃣ Upload AAB artifact
+      - name: Upload App Bundle artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-arm64-release
-          path: build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
+          name: app-release-bundle
+          path: build/app/outputs/bundle/release/app-release.aab
