--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: getapp
 description: "A new Flutter project."
 publish_to: 'none'
 
-version: 1.0.2+3
+version: 1.0.3+4
 
 environment:
   sdk: ">=3.9.2 <4.0.0"
@@ -25,6 +25,8 @@ dependencies:
   device_info_plus: ^10.1.0
   flutter_local_notifications: ^17.1.2
   google_mobile_ads: ^5.3.1
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.3.0
   
 
 dev_dependencies:
