--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -1,4 +1,4 @@
-name: Flutter Build APK (All ABIs Unsigned)
+name: Flutter Build APK arm64
 
 on:
   push:
@@ -40,7 +40,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # 5️⃣ Get dependencies
+      # 5️⃣ Get Flutter dependencies
       - name: Get dependencies
         run: flutter pub get
 
@@ -48,14 +48,13 @@ jobs:
       - name: Clean build
         run: flutter clean
 
-      # 7️⃣ 🏗️ Build APK untuk semua ABI (Unsigned)
-      - name: Build Unsigned APK (All ABIs)
-        run: |
-          flutter build apk --release --target-platform android-arm,android-arm64,android-x64 --split-per-abi
+      # 7️⃣ Build APK arm64-v8a
+      - name: Build APK arm64
+        run: flutter build apk --release --target-platform=android-arm64 --split-per-abi
 
-      # 8️⃣ 📦 Upload hasil APK
-      - name: Upload APK artifacts
+      # 8️⃣ Upload APK artifact
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-release-apks-unsigned
-          path: build/app/outputs/flutter-apk/*.apk
+          name: app-arm64-release
+          path: build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
