--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ flutter:
 
   assets:
     - assets/
+    - assets/images/logo.png        
   
   fonts:
     - family: Jost
@@ -46,3 +47,4 @@ flutter:
         - asset: assets/fonts/Jost-Regular.ttf
         - asset: assets/fonts/Jost-Bold.ttf
           weight: 700
+    
