--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   google_mobile_ads: ^5.3.1
   firebase_core: ^3.4.0
   firebase_auth: ^5.3.0
+  package_info_plus: ^4.0.2
   
 
 dev_dependencies:
