--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   flutter_local_notifications: ^17.1.2
   google_mobile_ads: ^5.3.1
   firebase_core: ^2.25.0
-  firebase_auth: ^5.3.0   # gunakan satu entri saja (versi terbaru yang kompatibel)
+  firebase_auth: ^4.16.0
   firebase_analytics: ^10.10.7
   package_info_plus: ^4.0.2
 
