--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,10 +20,9 @@
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
         
-        <property
-            android:name="android.adservices.AD_SERVICES_CONFIG"
-            android:resource="@xml/gma_ad_services_config"
-            tools:replace="android:resource" />        
+        <meta-data
+    android:name="android.adservices.AD_SERVICES_CONFIG"
+    android:resource="@xml/gma_ad_services_config" />        
 
         <!-- 🟦 Main Activity -->
         <activity
