--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,17 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.esa.mlxinjector">
 
-    <!-- ✅ Izin umum -->
+    <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
-    <!-- ✅ Izin AdMob (untuk Android 13+) -->
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
-
-    <!-- ✅ Izin Shizuku -->
     <uses-permission android:name="moe.shizuku.manager.permission.API_V23" />
 
     <application
@@ -19,12 +16,14 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
-        
-        <meta-data
-    android:name="android.adservices.AD_SERVICES_CONFIG"
-    android:resource="@xml/gma_ad_services_config" />        
 
-        <!-- 🟦 Main Activity -->
+        <!-- FIX: override AD_SERVICES_CONFIG conflict -->
+        <property
+            android:name="android.adservices.AD_SERVICES_CONFIG"
+            android:resource="@xml/gma_ad_services_config"
+            tools:replace="android:resource" />
+
+        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -45,19 +44,19 @@
             </intent-filter>
         </activity>
 
-        <!-- 🟦 AdMob Activity -->
+        <!-- AdMob Activity -->
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:exported="false"
             android:theme="@android:style/Theme.Translucent"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
 
-        <!-- 🟦 AdMob App ID -->
+        <!-- AdMob App ID -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-1802736608698554~9016100457" />
 
-        <!-- 🟦 Shizuku Provider -->
+        <!-- Shizuku Provider -->
         <provider
             android:name="rikka.shizuku.ShizukuProvider"
             android:authorities="${applicationId}.shizuku"
@@ -69,9 +68,10 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
     </application>
 
-    <!-- 🟦 Queries (untuk akses package lain) -->
+    <!-- Queries -->
     <queries>
         <package android:name="com.mobile.legends" />
         <package android:name="com.mobile.legends.hwag" />
@@ -92,4 +92,5 @@
             <data android:scheme="https" />
         </intent>
     </queries>
+
 </manifest>
