--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_auth: ^4.16.0
   firebase_analytics: ^10.10.7
   package_info_plus: ^4.0.2
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -40,6 +41,7 @@ flutter:
   assets:
     - assets/
     - assets/images/logo.png
+    - assets/animations/bg.json
 
   fonts:
     - family: Jost
